Se agregaron javadocs a los archivos, se modificó el analizador Default para que el programa pueda compilar, se arregló el pom.xml y se solucionó un bug que estaba en los tests que hacía que se ejecuten infinitamente.