@@ -4,16 +4,30 @@ import lexer.Lexer;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 import parser.Parser;
+import utils.DiagnosticsHandler;
 import utils.SymbolTable;
 
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+/**
+ * Unit tests for the Bison-generated {@link Parser}.
+ * <p>
+ * Tests parsing of syntactically valid IEC 61131-7 example programs
+ * from the test resources directory.
+ * </p>
+ *
+ * @author Matias Ortiz
+ * @author Victoriano Etcheverría
+ * @version 1.0
+ * @since 1.0
+ */
 class ParserTest {
 
     private static Stream<File> exampleFileProvider() {
@@ -21,7 +35,7 @@ class ParserTest {
         try (Stream<Path> paths = Files.walk(resourcesPath)) {
             return paths.filter(Files::isRegularFile)
                         .map(Path::toFile)
-                        .toList()
+                        .collect(Collectors.toList())
                         .stream();
         }
         catch (IOException e) {
@@ -34,9 +48,11 @@ class ParserTest {
     void Parse_ForSyntacticallyValidPrograms_IsTrue(File exampleFile) {
         try (FileReader reader = new FileReader(exampleFile)) {
             SymbolTable st = new SymbolTable();
-            Lexer lexer = new Lexer(reader, st);
+            DiagnosticsHandler dh = new DiagnosticsHandler();
+            Lexer lexer = new Lexer(reader, st, dh);
             Parser parser = new Parser(lexer, st);
             assertTrue(parser.parse());
+            assertFalse(dh.hasErrors());
         } catch (Exception e) {
             fail("Test failed with file: " + exampleFile.getName() + " due to: " + e.getMessage());
         }
